# src/features/business/routes/index.ts
@@ -1,7 +1,6 @@
 import { Router } from "express";
 import { withTryCatch } from "../../../utils/error";
-import { RequestWithUser, verifyAuth } from "../../../middlewares/verify";
-import { Business } from "../types";
+import { RequestWithUser } from "../../../middlewares/verify";
 import {
   getApiValidators,
   validators,
@@ -17,7 +16,7 @@ export const router = Router();
 
 /////////////////////////////////////////////////////////////////
 
-router.route("/public/business").get(pagination, (req, res) => {
+router.route("/business").get(pagination, (req, res) => {
   withTryCatch(req, res, async () => {
     const { paginateOptions, query } = req as unknown as RequestWithPagination;
 
@@ -39,94 +38,15 @@ router.route("/public/business").get(pagination, (req, res) => {
 /////////////////////////////////////////////////////////////////
 
 router
-  .route("/business")
-  .get(verifyAuth, pagination, (req, res) => {
-    withTryCatch(req, res, async () => {
-      const { user, paginateOptions, query } =
-        req as unknown as RequestWithUser & RequestWithPagination;
-
-      const { routeName, search } = query;
-
-      const out = await queryHandlesBusiness.getAll({
-        res,
-        paginateOptions,
-        user,
-        routeName,
-        search,
-      });
-
-      if (out instanceof ServerResponse) return;
-
-      res.send(out);
-    });
-  })
-  .post(
-    verifyAuth,
-    ...getApiValidators(
-      validators.body("name").notEmpty(),
-      validators.body("category").notEmpty(),
-      validators.body("routeName").notEmpty()
-    ),
-    (req, res) => {
-      withTryCatch(req, res, async () => {
-        const { body, user } = req as unknown as RequestWithUser<
-          any,
-          any,
-          Business
-        >;
-
-        const { name, category, routeName } = body;
-
-        const out = await queryHandlesBusiness.addOne({
-          category,
-          name,
-          routeName,
-          user,
-          res,
-        });
-
-        if (out instanceof ServerResponse) return;
-
-        res.send(out);
-      });
-    }
-  );
-
-/////////////////////////////////////////////////////////////////
-
-router
-  .route("/public/business/:businessId")
-  .get(
-    ...getApiValidators(validators.param("businessId").notEmpty()),
-    (req, res) => {
-      withTryCatch(req, res, async () => {
-        const { params, query } = req as unknown as RequestWithUser;
-        const { businessId } = params;
-
-        const out = await queryHandlesBusiness.findOne({
-          res,
-          businessId,
-        });
-
-        if (out instanceof ServerResponse) return;
-
-        res.send(out);
-      });
-    }
-  );
-
-router
   .route("/business/:businessId")
   .get(
-    verifyAuth,
     ...getApiValidators(validators.param("businessId").notEmpty()),
     (req, res) => {
       withTryCatch(req, res, async () => {
-        const { user, params, query } = req as unknown as RequestWithUser;
+        const { params } = req as unknown as RequestWithUser;
         const { businessId } = params;
 
         const out = await queryHandlesBusiness.findOne({
-          user,
           res,
           businessId,
         });
@@ -134,27 +54,6 @@ router
         if (out instanceof ServerResponse) return;
 
         res.send(out);
-      });
-    }
-  )
-  .delete(
-    verifyAuth,
-    ...getApiValidators(validators.param("businessId").notEmpty()),
-    (req, res) => {
-      withTryCatch(req, res, async () => {
-        const { user, params } = req as unknown as RequestWithUser;
-
-        const { businessId } = params;
-
-        const out = await queryHandlesBusiness.deleteOne({
-          res,
-          businessId,
-          user,
-        });
-
-        if (out instanceof ServerResponse) return;
-
-        res.send();
       });
     }
   );
